<resources>
    <string name="app_name">Control Rendimiento</string>
    <string name="hint_email">Email *</string>
    <string name="hint_password">Contraseña *</string>
    <string name="crea_cuenta_button">Crear Cuenta</string>
    <string name="iniciar_sesion_button">Iniciar Sesion</string>
    <string name="datos_generales">Datos Generales</string>
    <string name="hint_nombre">Nombres *</string>
    <string name="hint_paterno">Apellido Paterno *</string>
    <string name="hint_materno">Apellido Materno *</string>
    <string name="hint_talla">Estatura *</string>
    <string name="hint_sexo">Genero *</string>
    <string name="hint_peso">Peso (Kg) *</string>
    <string name="datos_contacto">Datos de contacto</string>
    <string name="hint_telefono">Telefono/Celular *</string>
    <string name="hint_direccion">Domicilio</string>
    <string name="datos_emergencia">Datos de emergencia</string>
    <string name="hint_telefonoApoderado">Telefono familiar</string>
    <string name="hint_seguro_medico">Telefono Seguro Medico</string>
    <string name="finalizar_registro">Finalizar registro</string>
    <string name="sesion_diaria">Sesion Diaria</string>
    <string name="datos_frecuencia">Frecuencia Cardiaca</string>
    <string name="title_datos_frecuencia_volumen">Datos Vitales</string>
    <string name="envia">Enviar</string>
    <string name="enviar">Enviar</string>
    <string name="control_de_rendimiento">CONTROL DE RENDIMIENTO</string>
    <string name="adicionar">Adicionar</string>
    <string name="competencia_nacional">Competencia Nacional</string>
    <string name="nombre_de_competencia">Nombre de competencia</string>
    <string name="fecha_inicial">Fecha Inicial</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?,</string>
    <string name="crear_aqui"> crea una aquí</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="toolbar_tittle_editar_registro">Editar Registro</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="frecuencia_cardiaca">Frecuencia cardiaca Basal</string>
    <string name="volumen_general">Volumen general</string>

    <string name="main.tv.registrate">Registrate</string>
    <string name="main.tv.iniciasesion">Iniciar Sesion</string>
    <string name="main.btn.regis.twitter">Registrate con Twitter</string>
    <string name="main.btn.regis.correo">Registrate con tu correo electronico</string>
    <string name="title_editar_registro_atleta">Editar Registro</string>
    <string name="finalizar_edicion">Finalizar Edicion</string>
    <string name="empezar">EMPEZAR</string>
    <string name="crear_cuanta_button">Crear Cuenta</string>
    <string name="fecha_final">Fecha Final</string>
    <string name="lugar_de_competencia">Lugar de competencia</string>
    <string name="tipo_de_etapa">Tipo de Etapa</string>
    <string name="etapa_general">Etapa General</string>
    <string name="peridodo_preparatorio">Peridodo Preparatorio</string>
    <string name="etapa_especifica">Etapa Especifica</string>
    <string name="periodo_de_competencia">Periodo de competencia</string>
    <string name="perido_preparatorio">Perido Preparatorio</string>
    <string name="periodo_competencia">Periodo Competencia</string>
    <string name="periodo_transicion">Periodo Transicion</string>
    <string name="natacion">NATACION</string>
    <string name="numero_de_microciclo">Numero de microciclo</string>
    <string name="numero_de_sesiones_por_microciclo">Numero de sesiones</string>
    <string name="volumen_total_por_microciclo">Volumen Total</string>
    <string name="carga_total_por_microciclo">Carga total por microciclo</string>
    <string name="regresar">Regresar</string>
    <string name="siguiente">Siguiente</string>
    <string name="editar_competencia">Editar competencia</string>
    <string name="iniciar">INICIAR</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="tiempo_de_trabajo">Tiempo de trabajo</string>
    <string name="ciclismo">CICLISMO</string>
    <string name="carrera_a_pie">PEDESTRISMO</string>
    <string name="etapa">ETAPA</string>
    <string name="seleccione_etapa">Seleccione Etapa</string>
    <string name="seleccione_periodo">Seleccione Periodo</string>
    <string name="macrociclo">Macrociclo</string>
    <string name="mesociclo">Mesociclo</string>
    <string name="entrenamiento">ENTRENAMIENTO</string>
    <string name="pedestrismo">PEDESTRISMO</string>
    <string name="pedestrismoMin">Pedestrismo</string>
    <string name="calentamiento">CALENTAMIENTO</string>
    <string name="fase_principal_1">FASE PRINCIPAL 1</string>
    <string name="fase_principal_2">FASE PRINCIPAL 2</string>
    <string name="eventos_competitivos">EVENTOS COMPETITIVOS</string>
    <string name="fase_fundamental">FASE FUNDAMENTAL</string>
    <string name="vuelta_a_la_calma">VUELTA A LA CALMA</string>
    <string name="entrenamiento_natacion">ENTRENAMIENTO NATACION</string>
    <string name="entrenamiento_ciclismo">ENTRENAMIENTO CICLISMO</string>
    <string name="listo">Listo</string>
    <string name="pedestrismo_mayuscula">PEDESTRISMO</string>


    <!-- Array etapas -->
    <string-array name="lista_etapas">
        <item>ETAPA GENERAL</item>
        <item>ETAPA ESPECIFICA</item>
    </string-array>

    <!-- Array periodos -->
    <string-array name="lista_periodos">
        <item>PERIODO PREPARATORIO</item>
        <item>PERIODO COMPETENCIA</item>
        <item>PERIODO TRANSICION</item>
    </string-array>

</resources>
