<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.summy.controlrendimiento.views.CarreraUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/carrera_a_pie"
            android:textColor="#388E3C"
            android:textSize="@dimen/textTitle"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/Subtitulo2"
            android:text="@string/tiempo_de_trabajo"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIniciarCa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/size_tiempo"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/btnIniciarCa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar"
                    android:theme="@style/RaisedButtonDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFinalizarCa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/size_tiempo"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/btnFinalizarCa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finalizar"
                    android:theme="@style/RaisedButtonDark" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarCa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/guardar"
            android:theme="@style/RaisedButtonDark" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
