<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.summy.controlrendimiento.views.NatacionUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/natacion"
            android:textColor="#388E3C"
            android:textSize="@dimen/textTitle"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/Subtitulo2"
            android:text="@string/tiempo_de_trabajo"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIniciarN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_tiempo" />

                <Button
                    android:id="@+id/btnIniciarN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar"
                    android:theme="@style/RaisedButtonDark" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFinalizarN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/size_tiempo" />

                <Button
                    android:id="@+id/btnFinalizarN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finalizar"
                    android:theme="@style/RaisedButtonDark" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvTiempoT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/Subtitulo2"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textTitle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFcMaxN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="FC/MAX" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/enviar"
                android:theme="@style/RaisedButtonDark" />

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/guardar"
            android:theme="@style/RaisedButtonDark" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
